--- a/.gitignore
+++ b/.gitignore
@@ -205,3 +205,12 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+
+# --- ngrok ---
+.ngrok2/
+ngrok.yml
+
+# --- IDE/editor files ---
+.vscode/
+.idea/
+.DS_Store
